--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "start": "vite",
     "build": "tsc && vite build",
     "serve": "vite preview",
+    "dev": "vite",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
